@@ -38,33 +38,32 @@ static CFTypeID _kCFSetTypeID = 0;
 static void
 CFSetFinalize (CFTypeRef cf)
 {
-  GSHashTableFinalize ((GSHashTableRef)cf);
+  GSHashTableFinalize ((GSHashTableRef) cf);
 }
 
 static Boolean
 CFSetEqual (CFTypeRef cf1, CFTypeRef cf2)
 {
-  return GSHashTableEqual ((GSHashTableRef)cf1, (GSHashTableRef)cf2);
+  return GSHashTableEqual ((GSHashTableRef) cf1, (GSHashTableRef) cf2);
 }
 
 static CFHashCode
 CFSetHash (CFTypeRef cf)
 {
-  return GSHashTableHash ((GSHashTableRef)cf);
+  return GSHashTableHash ((GSHashTableRef) cf);
 }
 
 static CFStringRef
 CFSetCopyFormattingDesc (CFTypeRef cf, CFDictionaryRef formatOptions)
 {
-  return CFSTR("");
+  return CFSTR ("");
 }
 
-static CFRuntimeClass CFSetClass =
-{
+static CFRuntimeClass CFSetClass = {
   0,
   "CFSet",
   NULL,
-  (CFTypeRef(*)(CFAllocatorRef, CFTypeRef))CFSetCreateCopy,
+  (CFTypeRef (*)(CFAllocatorRef, CFTypeRef)) CFSetCreateCopy,
   CFSetFinalize,
   CFSetEqual,
   CFSetHash,
@@ -72,25 +71,24 @@ static CFRuntimeClass CFSetClass =
   NULL
 };
 
-void CFSetInitialize (void)
+void
+CFSetInitialize (void)
 {
   _kCFSetTypeID = _CFRuntimeRegisterClass (&CFSetClass);
 }
 
 
 
-const CFSetCallBacks kCFCopyStringSetCallBacks =
-{
+const CFSetCallBacks kCFCopyStringSetCallBacks = {
   0,
-  (CFTypeRef (*)(CFAllocatorRef, CFTypeRef))CFStringCreateCopy,
+  (CFTypeRef (*)(CFAllocatorRef, CFTypeRef)) CFStringCreateCopy,
   CFTypeReleaseCallBack,
   CFCopyDescription,
   CFEqual,
   CFHash
 };
 
-const CFSetCallBacks kCFTypeSetCallBacks =
-{
+const CFSetCallBacks kCFTypeSetCallBacks = {
   0,
   CFTypeRetainCallBack,
   CFTypeReleaseCallBack,
@@ -103,62 +101,100 @@ const CFSetCallBacks kCFTypeSetCallBacks =
 
 CFSetRef
 CFSetCreate (CFAllocatorRef allocator, const void **values, CFIndex numValues,
-  const CFSetCallBacks *callBacks)
+             const CFSetCallBacks * callBacks)
 {
-  return (CFSetRef)GSHashTableCreate (allocator, _kCFSetTypeID,
-    values, values, numValues,
-    (const GSHashTableKeyCallBacks*)callBacks, NULL);
+  return (CFSetRef) GSHashTableCreate (allocator, _kCFSetTypeID,
+                                       values, values, numValues,
+                                       (const GSHashTableKeyCallBacks *)
+                                       callBacks, NULL);
 }
 
 CFSetRef
 CFSetCreateCopy (CFAllocatorRef allocator, CFSetRef set)
 {
-  return (CFSetRef)GSHashTableCreateCopy (allocator, (GSHashTableRef)set);
+  if (CF_IS_OBJC (_kCFSetTypeID, set))
+    {
+      CFSetRef result;
+      const CFIndex count = CFSetGetCount (set);
+      void **values =
+        (void **) CFAllocatorAllocate (allocator, sizeof (void *) * count, 0);
+
+      CFSetGetValues (set, (const void **) values);
+      result =
+        CFSetCreate (allocator, (const void **) values, count,
+                     &kCFTypeSetCallBacks);
+
+      CFAllocatorDeallocate (allocator, (void *) values);
+      return result;
+    }
+
+  return (CFSetRef) GSHashTableCreateCopy (allocator, (GSHashTableRef) set);
 }
 
 void
-CFSetApplyFunction (CFSetRef set,
-  CFSetApplierFunction applier, void *context)
+CFSetApplyFunction (CFSetRef set, CFSetApplierFunction applier, void *context)
 {
-  
+  // TODO: could be made more efficient by providing a specialized
+  // implementation for the CF_IS_OBJC case
+
+  const CFIndex count = CFSetGetCount (set);
+  void **values =
+    (void **) CFAllocatorAllocate (NULL, sizeof (void *) * count, 0);
+  CFIndex i;
+
+  CFSetGetValues (set, (const void **) values);
+
+  for (i = 0; i < count; i++)
+    {
+      applier (values[i], context);
+    }
+
+  CFAllocatorDeallocate (NULL, (void *) values);
 }
 
 Boolean
 CFSetContainsValue (CFSetRef set, const void *value)
 {
-  return GSHashTableContainsKey ((GSHashTableRef)set, value);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, Boolean, set, "containsObject:", value);
+
+  return GSHashTableContainsKey ((GSHashTableRef) set, value);
 }
 
 CFIndex
 CFSetGetCount (CFSetRef set)
 {
-  return GSHashTableGetCount ((GSHashTableRef)set);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, CFIndex, set, "count");
+
+  return GSHashTableGetCount ((GSHashTableRef) set);
 }
 
 CFIndex
 CFSetGetCountOfValue (CFSetRef set, const void *value)
 {
-  return GSHashTableGetCountOfKey ((GSHashTableRef)set, value) > 0 ? 1 : 0;
+  return CFSetContainsValue (set, value) ? 1 : 0;
 }
 
 void
 CFSetGetValues (CFSetRef set, const void **values)
 {
-  GSHashTableGetKeysAndValues ((GSHashTableRef)set, values, NULL);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "_cfGetValues:", values);
+
+  GSHashTableGetKeysAndValues ((GSHashTableRef) set, values, NULL);
 }
 
 const void *
 CFSetGetValue (CFSetRef set, const void *value)
 {
-  return GSHashTableGetValue ((GSHashTableRef)set, value);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void *, set, "_cfGetValue:", value);
+
+  return GSHashTableGetValue ((GSHashTableRef) set, value);
 }
 
 Boolean
-CFSetGetValueIfPresent (CFSetRef set,
-  const void *candidate, const void **value)
+CFSetGetValueIfPresent (CFSetRef set, const void *candidate, const void **value)
 {
   const void *v;
-  
+
   v = CFSetGetValue (set, candidate);
   if (v)
     {
@@ -166,7 +202,7 @@ CFSetGetValueIfPresent (CFSetRef set,
         *value = v;
       return true;
     }
-  
+
   return false;
 }
 
@@ -180,47 +216,78 @@ CFSetGetTypeID (void)
 
 CFMutableSetRef
 CFSetCreateMutable (CFAllocatorRef allocator, CFIndex capacity,
-  const CFSetCallBacks *callBacks)
+                    const CFSetCallBacks * callBacks)
 {
-  return (CFMutableSetRef)GSHashTableCreateMutable (allocator, _kCFSetTypeID,
-    capacity, (const GSHashTableKeyCallBacks*)callBacks, NULL);
+  return (CFMutableSetRef) GSHashTableCreateMutable (allocator, _kCFSetTypeID,
+                                                     capacity,
+                                                     (const
+                                                      GSHashTableKeyCallBacks *)
+                                                     callBacks, NULL);
 }
 
 CFMutableSetRef
 CFSetCreateMutableCopy (CFAllocatorRef allocator, CFIndex capacity,
-  CFSetRef set)
+                        CFSetRef set)
 {
-  return (CFMutableSetRef)GSHashTableCreateMutableCopy (allocator,
-    (GSHashTableRef)set, capacity);
+  if (CF_IS_OBJC (_kCFSetTypeID, set))
+    {
+      CFMutableSetRef result;
+      const CFIndex count = CFSetGetCount (set);
+      void **values =
+        (void **) CFAllocatorAllocate (allocator, sizeof (void *) * count, 0);
+      CFIndex i;
+
+      CFSetGetValues (set, (const void **) values);
+      result = CFSetCreateMutable (allocator, count, &kCFTypeSetCallBacks);
+
+      for (i = 0; i < count; i++)
+        GSHashTableAddValue ((GSHashTableRef) result, values[i], values[i]);
+
+      CFAllocatorDeallocate (allocator, (void *) values);
+      return result;
+    }
+
+  return (CFMutableSetRef) GSHashTableCreateMutableCopy (allocator,
+                                                         (GSHashTableRef) set,
+                                                         capacity);
 }
 
 void
 CFSetAddValue (CFMutableSetRef set, const void *value)
 {
-  GSHashTableAddValue ((GSHashTableRef)set, value, value);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "addObject:", value);
+
+  GSHashTableAddValue ((GSHashTableRef) set, value, value);
 }
 
 void
 CFSetRemoveAllValues (CFMutableSetRef set)
 {
-  GSHashTableRemoveAll ((GSHashTableRef)set);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "removeAllObjects");
+
+  GSHashTableRemoveAll ((GSHashTableRef) set);
 }
 
 void
 CFSetRemoveValue (CFMutableSetRef set, const void *value)
 {
-  GSHashTableRemoveValue ((GSHashTableRef)set, value);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "removeObject:", value);
+
+  GSHashTableRemoveValue ((GSHashTableRef) set, value);
 }
 
 void
 CFSetReplaceValue (CFMutableSetRef set, const void *value)
 {
-  GSHashTableReplaceValue ((GSHashTableRef)set, value, value);
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "_cfReplaceValue:", value);
+
+  GSHashTableReplaceValue ((GSHashTableRef) set, value, value);
 }
 
 void
 CFSetSetValue (CFMutableSetRef set, const void *value)
 {
-  GSHashTableSetValue ((GSHashTableRef)set, value, value);
-}
+  CF_OBJC_FUNCDISPATCHV (_kCFSetTypeID, void, set, "_cfSetValue:", value);
 
+  GSHashTableSetValue ((GSHashTableRef) set, value, value);
+}
